bugfix header container:  - deleted from header-container     overflow-y: scroll;

--- a/css/main.css
+++ b/css/main.css
@@ -824,7 +824,6 @@ body.modal-open {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  overflow-y: scroll;
 }
 
 @media screen and (min-width: 768px) {
