--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -24,7 +24,6 @@
   align-items: center;
   justify-content: space-between;
 
-  overflow-y: scroll;
   @media screen and (min-width: $mobile) {
   }
 
